scroll-x safari checked, todo fix scroll-y

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,11 @@
+/* ************	Safari scroll-x quick fix */
+html {
+	overflow-x: hidden;
+}
+.load-item {
+	display: none !important;
+}
+
 /* ************              defaults*/
 #controls-holder {
 	display: none;
