--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,7 +3,7 @@ html {
 	overflow-x: hidden;
 }
 .load-item {
-	display: none !important;
+	/*display: none !important;*/
 }
 
 /* ************              defaults*/
