--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -130,7 +130,7 @@ hr {
 .page {
 	padding-right: 68px;
 	text-align: right;
-	width: 100%;
+	/*width: 100%;*/ /*yupiiiii found at last what was making mac scroll-x work funny :) */
 }
 .page.is-active {
 }
@@ -274,7 +274,8 @@ hr {
 	background-color: #DF3F54;
 }
 .contact header {
-	padding-top: 12vh;
+	padding-top: 3%;
+	padding-bottom: 3%;
 }
 .contact header hr {
 	color: #F17C71;
@@ -303,10 +304,12 @@ hr {
  footer {
  	height: 100px;
 	background-color: #3A3A3A;
-	position: fixed;
-	bottom: 0;
 	width: 100%;
 	height: 0;
+}
+footer #bg {
+	height: 100px;
+	background-color: #DF3F54;
 }
 footer p {
 	float: left;
@@ -332,7 +335,10 @@ footer p a {
 	cursor: pointer;
 }
 
-
+/* ************                                 slideshow */
+#slideshow {
+	display: none;
+}
 
 /* ************              responsive WINDOW WIDTH */
 @media screen and (max-width: 1024px) {
