--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -292,7 +292,7 @@ hr {
 	font-weight: 400;
 }
 .contact .s-header-one {
-	margin-bottom: -3vh;
+	margin-bottom: 0;
 }
 .contact .s-header-two {
 	color: #E9E7E3;
@@ -305,7 +305,6 @@ hr {
  	height: 100px;
 	background-color: #3A3A3A;
 	width: 100%;
-	height: 0;
 }
 footer #bg {
 	height: 100px;
