--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -161,7 +161,7 @@ hr {
 	text-align: center;
 	padding-top: 10%;
 }
-/* ************              home*/
+/* ************ home*/
 .home {
 	padding-top: 3%; /*12vh;*/
 	background-color: #E9E8E3;
@@ -190,7 +190,7 @@ hr {
 	padding-left: 4%;
 	width: 50%;
 }
-/* ************              work*/
+/* ************ work*/
 .work {
 	padding-bottom: 138px;
 	padding-top: 34px;
@@ -207,14 +207,14 @@ hr {
 	width: 100%;
 	color: #E9E5E3;
 }
-.work .content ul {
+.work .emb_gallery" {
 	display: inline-block;
 }
-.work .content li {
+.work .content .thumb {
 	display: inline-block;
 	margin: 16px 22px;
 }
-.work .content li img {
+.work .content .thumb img {
 	display: inline-block;
 }
 .work #portfolio a {
@@ -226,11 +226,11 @@ hr {
 .work #portfolio a:hover {
 	cursor: pointer;
 }
-.work #portfolio li:hover {
+.work #portfolio .thumb:hover {
 	cursor: pointer;
 }
 
-/* ************              project gallery */
+/* ************ project gallery */
 #closeGallery a {
 	width:95px;
 	height:95px;
@@ -240,14 +240,15 @@ hr {
 	right:70px;
 	text-indent:-9000px;
 }
-/* ************              PORTFOLIO project details */
-#portfolio ul li a {
+/* ************ PORTFOLIO project details */
+#portfolio .thumb a {
 	position: relative;	
 }
 #portfolio img {
 	transition: transform 0.4s;
 }
-.no-touch #portfolio li:hover img, #portfolio li.cs-hover img {
+.no-touch #portfolio .thumb:hover img
+, #portfolio .thumb.cs-hover img {
 	transform:  translate(-70px, -70px) scale(0.7);
 }
 .he-second {
@@ -280,7 +281,7 @@ hr {
 }
 
 
-/* ************              about*/
+/* ************ ABOUT */
 .about {
 	padding-top: 6%;
 	padding-bottom: 7%;
@@ -320,7 +321,7 @@ hr {
 	width: 50px;
 	margin: 0 auto 4%;
 }
-/* ************              contact*/
+/* ************ contact*/
 .page.contact {
 	background-color: #DF3F54;
 }
@@ -351,7 +352,7 @@ hr {
 .contact p {
 	font-size: 0.21em;
 }
-/* **************************              footer */
+/* ************************** footer */
  footer {
  	height: 100px;
 	background-color: #3A3A3A;
@@ -385,12 +386,12 @@ footer p a {
 	cursor: pointer;
 }
 
-/* ************                                 slideshow */
+/* ************ slideshow */
 #slideshow {
 	display: none;
 }
 
-/* ************              responsive WINDOW WIDTH */
+/* ************ responsive WINDOW WIDTH */
 @media screen and (max-width: 1024px) {
 	h1 {
 		font-size: 1.15em;
@@ -398,6 +399,7 @@ footer p a {
 	p, .about p {
 		font-size: .2em;
 	}
+	/* HOME */
 	.home {
 		padding-top: 10vh; /*17%;*/
 	}
@@ -406,6 +408,7 @@ footer p a {
 		width: 95%;
 		padding-left: 0;
 	}
+	/* CONTACT */
 	.contact .sub-header {
 		margin-right; 0;
 		width: 51.8%;	
@@ -454,20 +457,34 @@ footer p a {
 		width: 95%;
 		margin-top: 5%;
 	}
-	.sub-header {
-		width: 100%;
-		float: none;
+	.page .content {
+		padding-top: 5%;
+		margin: 0;
 	}
 	.page header span {
 		float: none;
 	}
-	.home.page header, .contact.page header {
+	.sub-header {
+		width: 100%;
+		float: none;
+	}
+	p, .about p {
+		font-size: .23em;
+	}	
+	hr {
+		margin: 0px auto 3%;
+	}
+
+	/* HOME */
+	.home header 
+	, .contact header {
 		margin-top: 15%;
 	}
+	/* ABOUT */
 	.about .content article {
 		width: 50%;
 	}
-	
+	/* CONTACT */
 	.contact header {
 		padding-top: 5%;
 	}
@@ -478,26 +495,19 @@ footer p a {
 		margin: 0;
 		width: 55%;
 	}	
-	.page .content {
-		padding-top: 5%;
-		margin: 0;
-	}
-	.work .content li {
-		margin: 3% 4%;
-		width: 33%;
-	}
-	.work .content li img {
-		width: 100%;
-	}
-	p, .about p {
-		font-size: .23em;
-	}
 	.contact p {
 		font-size: 0.4em;
 	}
-	hr {
-		margin: 0px auto 3%;
+	
+	/* WORK */
+	.work .thumb {
+		margin: 3% 4%;
+		width: 33%;
 	}
+	.work .thumb img {
+		width: 100%;
+	}
+	/* FOOTER */
 	footer p {
 		font-size: .85em;
 	}
@@ -533,6 +543,28 @@ footer p a {
 		margin: 0 0.3%;
 		padding: 3.5px 2px;
 	}
+	/* WORKS */
+	.work .thumb,
+	.work .he-second {
+		width: 85%;
+	}
+	.no-touch #portfolio .thumb img {
+		/* For Safari 3.1 to 6.0 */
+    	-webkit-transition-property: height;
+   		-webkit-transition-duration: 1s;
+    	-webkit-transition-timing-function: linear;
+   	 	-webkit-transition-delay: 2s;
+    	/* Standard syntax */
+    	transition-property: height;
+    	transition-duration: 1s;
+    	transition-timing-function: linear;
+    	transition-delay: .5s;
+	}
+	.no-touch #portfolio .thumb:hover img
+	, #portfolio .thumb.cs-hover img {
+		height: 0;
+	}
+	/* CONTACT */
 	.contact.page header {
 		margin-top: 40%;
 	}
