--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,4 +1,35 @@
-@media screen and (max-width: 768px) {
+/* ************************************ responsive by: WINDOW WIDTH  */
+
+/* ///////////////////////////////////////////////// MAX WIDTH 1024px //// */
+@media screen and (max-width: 1024px) {
+	h1 {
+		font-size: 1.15em;
+	}
+	p, .about p {
+		font-size: .2em;
+	}
+	/* HOME */
+	.home {
+		padding-top: 10vh; /*17%;*/
+	}
+	.home .sub-header {
+		float: right;
+		/*width: 95%;*/ /* TODO check if needed in other devices, else take out */
+		padding-left: 0;
+	}
+	/* CONTACT */
+	.contact .sub-header {
+		margin-right; 0;
+		width: 51.8%;	
+	}
+	.contact p {
+		font-size: .3em;
+	}
+}
+
+
+/* ///////////////////////////////////////////////// MAX WIDTH 768px //// */
+@media screen and (max-device-width: 768px) {
 	h1 {
 		text-align: center;
 	}
@@ -88,12 +119,21 @@
 	.work .thumb img {
 		width: 100%;
 	}
+	/* PORTFOLIO */
+	#closeGallery a { /* TODO check in other window sizes*/
+		width: 50px;
+		height: 50px;
+		background-size: cover;
+		top: 5%;
+		right: 5%;
+	}
 	/* FOOTER */
 	footer p {
 		font-size: .85em;
 	}
 }
-@media screen and (max-width: 640px) {
+/* ///////////////////////////////////////////////// MAX WIDTH 640px //// */
+@media screen and (max-device-width: 640px) {
 	.main-menu {
 		font-size: 0.86em;
 		margin: 16px 0 18px 0;
@@ -115,8 +155,12 @@
 		margin-top: 2%;
 	}
 }
-/*checking this for mobile layout */
-@media screen and (max-width: 480px) {
+
+/* ///////////////////////////////////////////////// MAX WIDTH 480px //// */
+@media screen and (max-device-width: 480px) {
+	.logo {
+		/*margin-top: 2px;*/
+	}
 	h1 {
 		font-size: 0.7em;
 	}
@@ -155,13 +199,7 @@
 		margin-top: 51%;
 		text-align: center;
 	}
-	#closeGallery a { /* TODO check in other window sizes*/
-		width: 50px;
-		height: 50px;
-		background-size: cover;
-		top: 5%;
-		right: 5%;
-	}
+	
 	/* CONTACT */
 	.contact.page header {
 		margin-top: 40%;
@@ -192,33 +230,5 @@
 	
 }
 
-/* #### Mobile Phones Portrait #### */
-@media screen and (max-device-width: 480px) and (orientation: portrait){
-  /* some CSS here */
-}
 
-/* #### Mobile Phones Landscape #### */
-@media screen and (max-device-width: 640px) and (orientation: landscape){
-  /* some CSS here */
-}
-
-/* #### Mobile Phones Portrait or Landscape #### */
-@media screen and (max-device-width: 640px){
-  /* some CSS here */
-}
-
-/* #### iPhone 4+ Portrait or Landscape #### */
-@media screen and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2){
-  /* some CSS here */
-}
-
-/* #### Tablets Portrait or Landscape #### */
-@media screen and (min-device-width: 768px) and (max-device-width: 1024px){
-  /* some CSS here */
-}
-
-/* #### Desktops #### */
-@media screen and (min-width: 1024px){
-  /* some CSS here */
-}
 
