--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -26,12 +26,19 @@
 
 /* ///////////////////////////////////////////////// MAX WIDTH 768px //// */
 @media screen and (max-device-width: 768px) {
+	/* text */
 	h1 {
 		text-align: center;
 	}
-	header.header-nav {
+	p, .about p {
+		font-size: .23em;
+	}	
+	hr {
+		margin: 0px auto 3%;
+	}
+	/* menu */
+	.header-nav {
 		height: auto;
-		padding-bottom: 2%;
 	}
 	.main-menu {
 		font-size: 1.28em;
@@ -56,7 +63,8 @@
 	.logo a img {
 		height: 5em;
 		width: auto;
-	}	
+	}
+	/* pages */	
 	.page {
 		padding: 0;
 		text-align: center;
@@ -72,16 +80,11 @@
 	.page header span {
 		float: none;
 	}
-	.sub-header {
+	.page .sub-header {
 		width: 100%;
 		float: none;
 	}
-	p, .about p {
-		font-size: .23em;
-	}	
-	hr {
-		margin: 0px auto 3%;
-	}
+	
 	/* ABOUT */
 	.about .content article {
 		width: 50%;
@@ -142,6 +145,38 @@
 }
 
 /* ///////////////////////////////////////////////// MAX WIDTH 480px //// */
+/* #### Mobile Phones Portrait #### */
+/* #### Mobile Phones Portrait #### */
+/* iPhone 3 GS 		####### 320 x 480
+/* iPhone 4 		####### 320 x 480
+/* iPhone 5 		####### 320 x 568
+/* iPhone 6 				####### 375 x 667
+/* iPhone 6 Plus					####### 414 x 736
+/* BlackBerry Z10				####### 384 x 640
+/* BlackBerry Z30		####### 360 x 640
+/* Google Nexus 4				####### 384 x 640
+/* Google Nexus S	####### 320 x 533	
+/* HTC EVO			####### 320 x 533
+/* HTC Touch HD		####### 320 x 533
+/* HTC Desire SD	####### 320 x 533
+/* HTC Desire 		####### 320 x 533
+/* HTC One X			####### 360 x 640
+/* EVO LT 				####### 360 x 640
+/* HTC Sensation		####### 360 x 640
+/* EVO 3D				####### 360 x 640
+/* LG Optimus 2X	####### 320 x 533
+/* LG Optimus 3D	####### 320 x 533
+/* LG Optimus BLACK	####### 320 x 533
+/* LG Optimus G		####### 320 x 533
+/* LG Optimus LTE					####### 424 x 753
+/* LG Optimus 4X HD					####### 424 x 753
+/* LG Optimus One ####### 213 x 320
+/* Motorola Defy	####### 320 x 569
+/* Droid			####### 320 x 569
+/* Droid X 			####### 320 x 569
+/* Milestone X 		####### 320 x 569
+/* */
+
 @media screen and (max-device-width: 480px) {
 	.main-menu a:hover {
 		border-bottom: none;
@@ -237,6 +272,24 @@
 	
 }
 
+/* ************************************ responsive by orientation: landscape */
+@media screen and (max-device-width: 640px) and (orientation: landscape){
+	.landscape .logo {
+		float: left;
+		margin: 12px;
+	}
+	/* HOME */
+	
+}
+
+/* #### iPhone 4+ Portrait or Landscape #### */
+@media screen and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2){
+  /* some CSS here */
+}
+
+
+
+
 /* ************************************ responsive by: .touch class */
 
 /* ///////////////////////////////////////////////// MAX WIDTH 1024px //// */
@@ -248,13 +301,9 @@
 
 
 
-/* #### Mobile Phones Portrait #### */
-@media screen and (max-device-width: 480px) and (orientation: portrait){
-  /* some CSS here */
-}
+
 
 /* #### Mobile Phones Landscape #### */
-@media screen and (max-device-width: 640px) and (orientation: landscape){
   /* some CSS here */
 }
 
@@ -263,17 +312,21 @@
   /* some CSS here */
 }
 
-/* #### iPhone 4+ Portrait or Landscape #### */
-@media screen and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2){
-  /* some CSS here */
-}
+
 
 /* #### Tablets Portrait or Landscape #### */
+/* blackberry playbook 6 	####### 1024 x 600
+/* google Nexus 7			####### 966 x 604
+/* google Nexus 7.2			####### 960 x 604
+
+
 @media screen and (min-device-width: 768px) and (max-device-width: 1024px){
   /* some CSS here */
 }
 
 /* #### Desktops #### */
+/* google Nexus 10	####### 1280 x 800
+
 @media screen and (min-width: 1024px){
   /* some CSS here */
 }
