--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -81,51 +81,52 @@ body {
 	background-color: #E9E8E3;
 	z-index: 1000;
 }
-
+#fixed-header-aux {
+	height: 116px;
+}
 /* *********************** logo */
-.logo {
+#logo {
 	display: inline-block;
 	float: left;
 	margin-left: 4.53%; /*62px;*/
 	margin-top: 42px;
 }
-.logo img {
+#logo img {
 	width: 146px;
 	height: 99px;
 }
-.logo a {
+#logo a {
 	display: block;
 }
 
-/* ******************* menu */
-.main-menu {
+/* ******************* menu navigation */
+nav {
 	float: right;
 	margin-right: 80px;
 	font-weight: 700;
 	font-size: 20px;
 	text-transform: uppercase;
 }
-.main-menu {
+nav {
 	margin-top: 77px;
 	position: relative;
 }
-.main-menu a {
+nav a {
 	float: left;
 	padding: 3.5px 4px;
 	margin-left: 10px;
 	color: inherit;
 }
-.main-menu a.active-link {
+nav a.active-link {
 	font-weight: 900;
 	border-bottom: solid #DF3F54 3px !important; /* need to override .touch class no border */
 }
-.main-menu a:hover {
+nav a:hover {
 	font-weight: 900;
 	border-bottom: solid #DF3F54 3px; /* .touch has to override this */
 }
 
-/* *********************************** pages/sections */
-
+/* *********************************** SECTIONS */
 .page {
 	padding-right: 68px;
 	text-align: right;
@@ -155,28 +156,28 @@ body {
 	padding-top: 10%;
 }
 /* ************ HOME */
-.home {
+#home {
 	padding-top: 3%; /*12vh;*/
 	background-color: #E9E8E3;
 	color: #393939;
 }
-.home #smile {	
+#smile {	
 	position: relative;
 	left: 15px;
 	height: 0.456em;
 }
-.home header hr {
+#home header hr {
 	margin-top: -6px;
 	margin-bottom: 16px;
 	color: #272727;
 	background-color: #272727; 
 }
-.home .s-header-one {
+#home .s-header-one {
 	float: none;
 }
-.home .s-header-two {
+#home .s-header-two {
 }
-.home .sub-header {
+#home .sub-header {
 	margin-top: 15px;
 	margin-bottom: 6%;
 	color: #4A4A4A;
@@ -184,42 +185,42 @@ body {
 	width: 50%;
 }
 /* ************ WORK */
-.work {
+#work {
 	padding-bottom: 138px;
 	padding-top: 34px;
 	background-color: #3A3A3A;
 }
-.work h1 {
+#work h1 {
 	color: #E9E6E3;
 }
-.work header hr {
+#work header hr {
 	color: #F17C71;
 	background-color: #F17C71; 
 }
-.work .sub-header {
+#work .sub-header {
 	width: 100%;
 	color: #E9E5E3;
 }
-.work .emb_gallery" {
+#work .emb_gallery" {
 	display: inline-block;
 }
-.work .content .thumb {
+#work .content .thumb {
 	display: inline-block;
 	margin: 16px 22px;
 }
-.work .content .thumb img {
+#work .content .thumb img {
 	display: inline-block;
 }
-.work #portfolio a {
+#portfolio a {
 	display: block;
 }
-.work #portfolio img:hover {
+#portfolio img:hover {
 	cursor: pointer;
 }
-.work #portfolio a:hover {
+#portfolio a:hover {
 	cursor: pointer;
 }
-.work #portfolio .thumb:hover {
+#portfolio .thumb:hover {
 	cursor: pointer;
 }
 
@@ -275,28 +276,28 @@ body {
 
 
 /* ************ ABOUT */
-.about {
+#about {
 	padding-top: 6%;
 	padding-bottom: 7%;
 	background-color: #363B48;
 }
-.about h1 {
+#about h1 {
 	color: #E9E7E3;
 }
-.about header hr {
+#about header hr {
 	color: #F17C71;
 	background-color: #F17C71; 
 }
-.about .sub-header {
+#about .sub-header {
 	color: #E9E5E3;
 }
-.about p {
+#about p {
 	font-size: 0.14em;
 }
-.about .content {
+#about .content {
 	padding-top: 7%;
 }
-.about .content article {
+#about .content article {
 	display: inline-block;
 	margin: 36px 40px;
 	text-align: center;
@@ -304,41 +305,41 @@ body {
 	width: 21%;
 	vertical-align: top;
 }
-.about .content article img {
+#about .content article img {
 	display: inline-block;
 	width: 91%;
 }
-.about .content hr {
+#about .content hr {
 	color: #E9E8E3;
 	background-color: #E9E8E3;
 	width: 50px;
 	margin: 0 auto 4%;
 }
 /* ************ CONTACT */
-.page.contact {
+#contact {
 	background-color: #DF3F54;
 }
-.contact header hr {
+#contact header hr {
 	color: #F17C71;
 	background-color: #F17C71; 
 }
-.contact h1.s-header-one {
+#contact h1.s-header-one {
 	color: #393939;
 }
-.contact .sub-header {
+#contact .sub-header {
 	width: 41.8%;
 	margin-right: 4%;
 	display: inline-block;
 	color: #E9E7E3;
 	font-weight: 400;
 }
-.contact .s-header-one {
+#contact .s-header-one {
 	margin-bottom: 0;
 }
-.contact .s-header-two {
+#contact .s-header-two {
 	color: #E9E7E3;
 }
-.contact p {
+#contact p {
 	font-size: 0.21em;
 }
 /* ************************** FOOTER */
