--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -54,6 +54,9 @@ hr {
 	position: absolute;
 	top: -9999px;
 }
+.hidden {
+	display: none;
+}
 /* ********************************* base styles */
 
 /* ************ fonts */
