--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -77,6 +77,9 @@ body {
 	overflow-y: scroll;
 }
 /* ************************************ HEADER */
+#main-header {
+	overflow: visible;
+}
 #main-header.top.fixed {
 	top: 0;
 	height: 116px;
