refactoring and checking responsive

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,3 +1,4 @@
+
 /* ************************************ responsive by: WINDOW WIDTH  */
 
 /* ///////////////////////////////////////////////// MAX WIDTH 1024px //// */
@@ -303,6 +304,7 @@
 
 
 
+/* ************************************ responsive by: header class */
 
 
 
