--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,7 +30,7 @@ h1 {
 	text-transform: uppercase;
 }
 p {
-	font-size: .15em;
+	font-size: .2em;
 }
 hr {
 	border: 0;
@@ -70,6 +70,7 @@ hr {
 /* ******************************* basic layout*/
 html {
 	height: 100%;
+	opacity: 0;
 }
 body {
 	margin: 0;
@@ -173,8 +174,6 @@ nav a:hover {
 	height: 0.456em;
 }
 #home header hr {
-	margin-top: -6px;
-	margin-bottom: 16px;
 	color: #272727;
 	background-color: #272727; 
 }
@@ -350,20 +349,24 @@ nav a:hover {
 }
 /* ************************** FOOTER */
  footer {
- 	height: 100px;
+ 	/*height: 100px;*/
+ 	height: 100%;
+ 	/*padding: 20px 0;*/
 	background-color: #3A3A3A;
 	width: 100%;
 }
-footer #bg {
+/*footer #bg {
 	height: 100px;
 	background-color: #DF3F54;
-}
+}*/
 footer p {
 	float: left;
-	padding: 38px 70px;
+	padding: 2.5% 0; /* same as social */
+	margin: 0 68px;
 	font-weight: 700;
 	font-size: 16px;
 	color: #E9E6E3;
+	line-height: 35px; /* same as #social */
 }
 footer p a {
 	color: #DF3F53;
@@ -371,7 +374,8 @@ footer p a {
 }
 #social {
 	margin: 0 68px;
-	padding-top: 35px;	
+/*	padding-top: 15px;	*/
+	padding: 2.5% 0;
 	text-align: right;
 }
 #social li {
