--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -178,7 +178,7 @@ nav a:hover {
 	background-color: #272727; 
 }
 #home .s-header-one {
-	float: none;
+/*	float: none;*/
 }
 #home .s-header-two {
 }
@@ -187,7 +187,7 @@ nav a:hover {
 	margin-bottom: 6%;
 	color: #4A4A4A;
 	padding-left: 4%;
-	width: 50%;
+	width: 75%;
 }
 /* ************ WORK */
 #work {
