--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,68 +1,112 @@
-3
-/* *********************************** defaults */
+/* ******************************************** */
+/* **************** BACKGROUNDS AND FONT COLORS */
+.light_gray_bg {
+  background-color: #E9E8E3;
+}
+.dark_gray_bg {
+  background-color: #3A3A3A;
+}
+.dark_blue_bg {
+  background-color: #363B48;
+}
+.fuxsia_bg {
+  background-color: #DF3F54;
+}
+.light_fuxsia_bg {
+  background-color: #F17C71;
+}
+
+.light_gray_color {
+  color: #E9E8E3;
+}
+.dark_gray_color {
+  color: #393939;
+}
+.dark_blue_color {
+  color: #363B48;
+}
+.fuxsia_color {
+  color: #DF3F54;
+}
+.light_fuxsia_color {
+  color: #F17C71;
+}
+/* ******************************************** */
+/* *********************************** DEFAULTS */
 .ui-loader {
-	display: none;
+  display: none;
 }
 * {
-	margin: 0;
-	padding: 0;
-	-moz-box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  -moz-box-sizing: border-box;
 }
 body {
-	background-color: #E9E8E3; 
-	font-family: 'Lato', sans-serif;
-	font-weight: 100;
-	color: black;
+  font-family: 'Lato', sans-serif;
+  font-weight: 100;
+  color: black;
 }
 a {
-	text-decoration: none;
+  text-decoration: none;
 }
 ul, li {
-	list-style: none;
+  list-style: none;
 }
-h1, h2, h3, h4, h5,h6 {
-	font-family: 'Dosis', sans-serif;
-	font-weight: 600; 
-	text-align: right;
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Dosis', sans-serif;
+  font-size: 130px;
+  font-weight: 600;
+  text-align: right;
 }
 h1 {
-	font-size: inherit;
-	text-transform: uppercase;
+  text-transform: uppercase;
 }
 p {
-	font-size: .2em;
+  font-size: .2em;
 }
-hr {
-	border: 0;
-	height: 3px;
-	width: 18%;
-	margin: 0 auto 3%;
-	clear: both;
+/* ******************************************** */
+/* ************************************ CLASSES */
+.left {
+  float: left;
 }
-/* ************************************** classes */
+.right {
+  float: right;
+}
 .clearfix {
-	clear: both;
+  clear: both;
 }
 .fixed {
-	position: fixed;
+  position: fixed;
 }
-.fullwidth.container {
-	width: 100%;
+.fullwidth {
+  width: 100%;
 }
 .screen-reader-text { 
-	/*left: -9999px;
-	top: -9999px;*/
-	position: absolute;
-	/* says browser will render 9999px wide box otherwise */
-	height: 0;
-	width: 0;
-	opacity: 0;
-	font-size: 0;
+  position: absolute;
+  height: 0;
+  width: 0;
+  opacity: 0;
+  font-size: 0;
 }
 .hidden {
-	display: none;
+  display: none;
 }
-/* ********************************* base styles */
+.fullheight {
+  /* = total - header height */
+  height: calc(100vh - 139px);
+  min-height: 100%;
+}
+.centered {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.top: {
+  top: 0;
+}
+
+/* ******************************************** */
+/* ******************************** BASE STYLES */
 
 /* ************ fonts */
 /* lato light (100)
@@ -72,146 +116,246 @@ hr {
 /* dosis semibold (600)
  */
 
-/* ******************************* basic layout*/
+/* ******************************************** */
+/* ******************************** BASE LAYOUT */
 html {
-	height: 100%;
-	opacity: 0;
+  height: 100%;
 }
 body {
 	margin: 0;
 	overflow-x: hidden;
 	overflow-y: scroll;
 }
-/* ************************************ HEADER */
-#main-header {
-	overflow: visible;
+.fullwrapper {
+  max-width: 1356px;
+  margin: auto;
 }
-#main-header.top.fixed {
-	top: 0;
-	height: 116px;
-	width: 100%;
-	background-color: #E9E8E3;
-	z-index: 1000;
+.wrapper > *.right {
+  margin-right: 82px; 
 }
-#fixed-header-aux {
-	height: 116px;
+.wrapper > *.left {
+  margin-left: 70px;
 }
-/* *********************** logo */
-#logo {
-	display: inline-block;
-	float: left;
-	margin-left: 4.53%; /*62px;*/
-	margin-top: 42px;
+.wrapper::after {
+  clear: both;
 }
-#logo img {
-	width: 146px;
-	height: 99px;
+.page {
+  /* = total - header height */
+  min-height: calc(100vh - 139px);
+  text-align: right;
 }
-#logo a {
-	display: block;
+.page header {
+  display: inline-block;
+  max-height: 100%;
+}
+.page .sub-header {
+	text-align: center;
+}
+.content {
+  text-align: center;
+}
+.header_hr {
+  border: 0;
+  height: 3px;
+  width: 100px;
+  margin: 0 auto 13px;
+  clear: both;
+}
+/* ******************************************** */
+/* ************************************** COVER */
+#cover {
+  display: none;
+  height: 100vh;
+  background-color: black;
 }
 
-/* ******************* menu navigation */
-nav {
-	float: right;
-	margin-right: 80px;
-	font-weight: 700;
-	font-size: 20px;
-	text-transform: uppercase;
+/* ******************************************** */
+/* **************** RESPONSIVE HEADLINES CONFIG */
+h1 {
+  line-height: 1.33;
+  font-size: inherit;
 }
-nav {
-	margin-top: 77px;
-	position: relative;
+p {
+	font-size: .2em;
 }
-nav a {
-	float: left;
-	padding: 3.5px 4px;
-	margin-left: 10px;
-	color: inherit;
+
+/* ******************************** */
+/* ****** RESPONSIVE HEADLINES HOME */
+#home .responsive_headline {
+  width: 560px;
+  height: 332px;
 }
-nav a.active-link {
+#home .responsive_headline h1 {
+  line-height: 1.02;
+}
+#home .responsive_headline p {
+  font-size: .156em;
+}
+
+/* ******************************** */
+/* ****** RESPONSIVE HEADLINES WORK */
+#work .responsive_headline {
+  width: 390px;
+  height: 167px;
+  margin-top: 68px;
+}
+#work .responsive_headline h1 {
+  line-height: .69;
+  margin-bottom: 44px;
+}
+#work .responsive_headline hr {
+  margin-bottom: 11px;
+}
+#work .responsive_headline p {
+  font-size: .15em;
+}
+
+/* ******************************** */
+/* ***** RESPONSIVE HEADLINES ABOUT */
+#about .responsive_headline {
+  width: 510px;
+  height: 240px;
+  margin-top: 167px;
+  margin-bottom: 184px;
+}
+#about .responsive_headline h1 {
+  line-height: .69;
+  margin-bottom: 40px;
+}
+#about .responsive_headline hr {
+  margin-bottom: 11px;
+}
+#about .responsive_headline p {
+  padding: 0 12px;
+  font-size: .135em;
+  line-height: 1.4;
+}
+
+/* ******************************** */
+/* *** RESPONSIVE HEADLINES CONTACT */
+#contact .responsive_headline {
+  width: 1202px;
+  height: 353px;
+}
+#contact .responsive_headline h1 {
+  display: inline-block;
+  line-height: 1;
+  margin-bottom: 36px;
+}
+#contact .responsive_headline .s-header-one {
+  width: 486px;
+  height: 97px;
+  font-size: 1.1em;
+  line-height: 0.8;
+  margin-bottom: 33px;
+}
+#contact .responsive_headline .s-header-two {
+  width: 1202px;
+  height: 97px;
+  font-size: 1em;
+  line-height: 0.8;
+}
+#contact .responsive_headline hr {
+  margin-bottom: 11px;
+}
+#contact .responsive_headline p {
+  padding: 0 12px;
+  font-size: .135em;
+  line-height: 1.4;
+}
+
+/* ******************************************** */
+/* ******************************** MAIN HEADER */
+#main-header {
+  overflow: visible;
+}
+#main-header.top.fixed {
+  height: 139px;
+  z-index: 1000;
+}
+#fixed-header-aux {
+	height: 139px;
+}
+
+/* ******************************** */
+/* *************************** LOGO */
+#logo {
+  position: relative;
+  height: 100%;
+}
+#logo a {
+  display: block;
+  position: absolute;
+  bottom: 0;
+}
+#logo.big a {
+  width: 146px;	
+}
+#logo img {
+	width: 100%;
+}
+
+/* ******************************** */
+/* *********************** MENU NAV */
+#header-nav {
+  margin-top: 85px;
+  font-weight: 700;
+  font-size: 18px;
+  text-transform: uppercase;
+}
+#header-nav li {
+  float: left;
+  margin-left: 8px;
+}
+#header-nav a {
+  display: block;
+  padding: 0 4px 2px 4px;
+  color: inherit;
+}
+#header-nav .active-link {
 	font-weight: 900;
 	border-bottom: solid #DF3F54 3px !important; /* need to override .touch class no border */
 }
-nav a:hover {
+#header-nav li:hover {
 	font-weight: 900;
 	border-bottom: solid #DF3F54 3px; /* .touch has to override this */
 }
 
+/* ******************************** */
+/* ***************** MENU COLLAPSED */
+#collapsed-menu {
+  width: 23px;
+  height: 19px;
+}
+#collapsed-menu:hover {
+  cursor: pointer;
+}
+/* ******************************************** */
 /* *********************************** SECTIONS */
-.page {
-	padding-right: 68px;
-	text-align: right;
-}
-.page.is-active {
-}
-.page header {
-	display: inline-block;
-}
-.page header span {
-	display: inline-block;
-	float: right;
-}
-.s-header-one {
-	margin-bottom: -7%;
-}
-.s-header-two {
-	clear: both;
-}
-.page .sub-header {
-	text-align: center;
-	float: right;
-}
-.content {
-	margin-right: -68px;
-	text-align: center;
-	padding-top: 10%;
-}
-/* ************ HOME */
+
+/* ******************************** */
+/* *************************** HOME */
 #home {
-	padding-top: 3%; /*12vh;*/
-	background-color: #E9E8E3;
-	color: #393939;
+  padding-top: 10px; 
 }
+#home header {
+  padding-right: 4px;
+}
+
 #smile {	
-	position: relative;
-	left: 15px;
-	height: 0.456em;
+  position: relative;
+  left: 16px;
+  top: 11px;
+  height: 0.456em;
 }
-#home header hr {
-	color: #272727;
-	background-color: #272727; 
-}
-#home .s-header-one {
-/*	float: none;*/
-}
-#home .s-header-two {
-}
-#home .sub-header {
-	margin-top: 15px;
-	margin-bottom: 6%;
-	color: #4A4A4A;
-	padding-left: 4%;
-	width: 75%;
-}
-/* ************ WORK */
+
+/* ******************************** */
+/* *************************** WORK */
 #work {
 	padding-bottom: 138px;
-	padding-top: 34px;
-	background-color: #3A3A3A;
 }
-#work h1 {
-	color: #E9E6E3;
-}
-#work header hr {
-	color: #F17C71;
-	background-color: #F17C71; 
-}
-#work .sub-header {
-	width: 100%;
-	color: #E9E5E3;
-}
-#work .emb_gallery" {
+
+#work .emb_gallery {
 	display: inline-block;
 }
 #work .content .thumb {
@@ -234,7 +378,8 @@ nav a:hover {
 	cursor: pointer;
 }
 
-/* ************ PROJECT gallery */
+/* ************************* */
+/* ********* PROJECT gallery */
 #closeGallery a {
 	width:95px;
 	height:95px;
@@ -244,7 +389,9 @@ nav a:hover {
 	right:70px;
 	text-indent:-9000px;
 }
-/* ************ PORTFOLIO project details */
+
+/* ************************* */
+/* PORTFOLIO project details */
 #portfolio .thumb a {
 	position: relative;	
 }
@@ -284,114 +431,84 @@ nav a:hover {
 	font-size: .75em;
 }
 
-
-/* ************ ABOUT */
+/* ******************************** */
+/* ************************** ABOUT */
 #about {
-	padding-top: 6%;
-	padding-bottom: 7%;
-	background-color: #363B48;
-}
-#about h1 {
-	color: #E9E7E3;
-}
-#about header hr {
-	color: #F17C71;
-	background-color: #F17C71; 
-}
-#about .sub-header {
-	color: #E9E5E3;
-}
-#about p {
-	font-size: 0.14em;
-}
-#about .content {
-	padding-top: 7%;
+  padding-bottom: 6%;
 }
 #about .content article {
-	display: inline-block;
-	margin: 36px 40px;
-	text-align: center;
-	color: #E9E5E3;
-	width: 21%;
-	vertical-align: top;
+  display: inline-block;
+  width: 26%;
+  margin: 0 20px 40px;
+  vertical-align: top;
 }
-#about .content article img {
-	display: inline-block;
-	width: 91%;
+#about .content .img-wrapper {
+  width: 248px;
+  height: 248px;
+  margin: auto;
+}
+#about .content .img-wrapper img {
+  width: 100%;
 }
 #about .content hr {
-	color: #E9E8E3;
-	background-color: #E9E8E3;
-	width: 50px;
-	margin: 0 auto 4%;
+  width: 50px;
+  margin: 0 auto 14px;
 }
-/* ************ CONTACT */
-#contact {
-	background-color: #DF3F54;
+#about .content p {
+  font-size: 1.07em;
+  line-height: 1.4;
 }
-#contact header hr {
-	color: #F17C71;
-	background-color: #F17C71; 
-}
-#contact h1.s-header-one {
-	color: #393939;
-}
+
+/* ******************************** */
+/* ************************ CONTACT */
 #contact .sub-header {
 	width: 41.8%;
 	margin-right: 4%;
 	display: inline-block;
-	color: #E9E7E3;
 	font-weight: 400;
 }
 #contact .s-header-one {
 	margin-bottom: 0;
 }
-#contact .s-header-two {
-	color: #E9E7E3;
-}
 #contact p {
 	font-size: 0.21em;
 }
-/* ************************** FOOTER */
- footer {
- 	/*height: 100px;*/
- 	height: 100%;
- 	/*padding: 20px 0;*/
-	background-color: #3A3A3A;
-	width: 100%;
+
+/* ******************************************** */
+/* ************************************* FOOTER */
+footer {
+  height: 100px;
+  width: 100%;
 }
-/*footer #bg {
-	height: 100px;
-	background-color: #DF3F54;
-}*/
 footer p {
-	float: left;
-	padding: 2.5% 0; /* same as social */
-	margin: 0 68px;
-	font-weight: 700;
-	font-size: 16px;
-	color: #E9E6E3;
-	line-height: 35px; /* same as #social */
+  font-weight: 700;
+  font-size: 16px;
 }
-footer p a {
-	color: #DF3F53;
+footer a {
 	font-weight: 900;
+	display: inline-block;
 }
 #social {
-	margin: 0 68px;
-/*	padding-top: 15px;	*/
-	padding: 2.5% 0;
-	text-align: right;
+  /* otherwise webkit adds margin 1em */
+  font-size: 0;
 }
 #social li {
 	display: inline-block;
 	padding-left: 6px;
 }
+#social a {
+  width: 32px;
+  height: 32px;
+}
+#social a img {
+  width: 100%;
+}
 #social li:hover {
-	cursor: pointer;
+  cursor: pointer;
 }
 
-/* ************ SLIDESHOW */
+/* ******************************************** */
+/* ********************************** SLIDESHOW */
 #slideshow {
 	display: none;
 }
